Formatting fixes, text too large.

--- a/css/main_styles.css
+++ b/css/main_styles.css
@@ -12,7 +12,7 @@
 }
 
 html {
-    font-size: 18px;
+    font-size: 16px;
 }
 /* Body Styles */
 body {
